k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: production
  labels:
    app.kubernetes.io/name: stateless-node-api
    app.kubernetes.io/part-of: node-api-application
spec:
  type: ClusterIP
  selector:
    app: stateless-node-api
  ports:
  - name: api-web
    port: 80
    targetPort: api-web
    protocol: TCP
